<resources>
    <string name="app_name">assignment3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_mvp">MVP</string>
    <string name="btn_mvvm">MVVM</string>
    <string name="text_enter_num1">Enter number 1</string>
    <string name="text_enter_num2">Enter number 2</string>
    <string name="text_result">Result: </string>
    <string name="btn_add">ADD</string>
    <string name="btn_sub">SUBTRACT</string>
    <string name="btn_mul">MULTIPLY</string>
    <string name="btn_div">DIVIDE</string>
</resources>